implemented get missing options